--- a/styles/_tools.scss
+++ b/styles/_tools.scss
@@ -1,97 +1,49 @@
-#tools {
-  min-height: 100vh;
+.tools-page {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  background-color: #2b2727;
 }
 
 .tool-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #2b2727;
-  margin-top: 10vh;
+  padding-top: 20vh;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  grid-template-columns: 50%;
+  grid-template-rows: 35% 20% 30%;
+  grid-row-gap: 2rem;
+  overflow: hidden;
 }
+
 .tool-image-container {
-  min-height: 35vh;
-  margin: 2rem;
-  position: relative;
-  z-index: 2;
+  grid-row: 1/2;
+  justify-self: center;
 }
 
 .tool-title {
-  font-family: "Montserrat", sans-serif;
-  font-size: 2.5rem;
+  grid-row: 2/3;
+  justify-self: center;
+  font-size: 3rem;
   font-weight: 800;
-  line-height: 50px;
-  position: relative;
-  z-index: 2;
+  margin-top: 1rem;
 }
 
 .tool-description {
-  font-size: 1.3rem;
+  grid-row: 3/4;
+  justify-self: center;
   font-weight: 600;
-  margin: 1rem 3rem;
-  line-height: 28px;
-  position: relative;
-  z-index: 2;
 }
 
 .tool-splash-red {
-  bottom: 0;
   right: 0;
-  z-index: 0;
+  bottom: 0;
+  height: 20%;
 }
 
 .tool-splash-yellow {
-  top: 0;
   right: 0;
   height: 30%;
-  z-index: 0;
 }
 
 .tool-splash-purple {
-  top: 40%;
-  left: 0;
+  top: 50%;
   transform: translateX(-50%);
-  z-index: 0;
-}
-
-@media only screen and (max-width: 768px) {
-  #tools {
-    flex-direction: column;
-    justify-content: space-around;
-    min-height: 180vh;
-  }
-  .tool-container {
-    min-height: 50%;
-  }
-  .tool-title {
-    font-size: 1.5rem;
-    font-weight: 800;
-    line-height: 50px;
-  }
-
-  .tool-description {
-    font-size: 1.1rem;
-    font-weight: 600;
-    margin: 1rem 2rem;
-    line-height: 28px;
-  }
-
-  .tool-splash-red {
-    height: 10%;
-  }
-
-  .tool-splash-yellow {
-    height: 15%;
-  }
-
-  .tool-splash-purple,
-  .line-break {
-    display: none;
-  }
 }
